- Aligns outliner > locations to toolbar. currently is misaligned - Aligns select icons with add icon on hover outliner - Vertical view correct vertical align rows > content was not centered - Test theming installer > Windows

--- a/resources/style/content.scss
+++ b/resources/style/content.scss
@@ -193,7 +193,7 @@
 
       &:not(:first-child):not(:last-child) {
         height: 24px;
-        padding-top: 2px;
+        padding-top: 3px;
       }
 
       > .filename {
@@ -204,6 +204,7 @@
         max-width: calc(100% - 32px); // minus thumbnail and some padding
         margin-left: 4px;
         padding: 2px;
+        padding-top: 4px;
       }
 
       .thumbnail-broken {
