--- a/resources/style/remake/outliner.scss
+++ b/resources/style/remake/outliner.scss
@@ -9,8 +9,7 @@
   bottom: 2rem;
   left: 0rem;
   right: 0rem;
-
-  top: 0.5rem;
+  top: 0.75rem;
 
   &:hover header [role='toolbar'] {
     opacity: 1;
